--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <h1 class="my-5">Learn,Build,Grow.</h1>
                 <p class="lead my-4">Unlock your Brilliance with our hands-on <a href="https://training.zuri.team" class="text-decoration-none text-danger">beginner</a> and <a href="https://internship.zuri.team" class="text-decoration-none text-danger">expert training.</a> Zuri Team has been <br> immensely successful in creating a global network of a highly adept intelligent workforce <br> that can help your company achieve their mission-critical <a href="https://talent.zuri.team" class="text-decoration-none text-danger">projects and goals</a></p>
             </div>
-            <a href="https://training.zuri.team/">
-                <button class="btn1 btn-danger border-0 btn-lg my-5 mx-3 rounded-0">I'm new to the Industry</button>
+        
+                <a href="industrypage.html" target="_blank"><button class="btn1 btn-danger border-0 btn-lg my-5 mx-3 rounded-0"> I'm new to the Industry</button>
             </a>
-            <a href="https://talent.zuri.team/">
-                <button class="btn2 btn-light btn-lg btn-outline-danger rounded-0">I need industry experience</button>
+            
+                <a href="thirdpage.html"><button class="btn2 btn-light btn-lg btn-outline-danger rounded-0">I need industry experience</button>
             </a>
         </div>
         </div>
