--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="industrypage.html" target="_blank"><button class="btn1 btn-danger border-0 btn-lg my-5 mx-3 rounded-0"> I'm new to the Industry</button>
             </a>
             
-                <a href="thirdpage.html"><button class="btn2 btn-light btn-lg btn-outline-danger rounded-0">I need industry experience</button>
+                <a href="thirdpage.html" target="_blank"><button class="btn2 btn-light btn-lg btn-outline-danger rounded-0">I need industry experience</button>
             </a>
         </div>
         </div>
